fixing link so it opens in new tab

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
     </div>
     </div>
-    <a href="https://github.com/annapaula20?tab=repositories">
+    <a href="https://github.com/annapaula20?tab=repositories" target="_blank">
       <button type="button"> All Github Repos</button>
     </a>
   </section>
